Fixes spacing and scroll bar

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -68,3 +68,14 @@
 body {
   background-color: #1a0029;
 }
+
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
